--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Wallet address generator for azero",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server/index.js"
+
   },
   "repository": {
     "type": "git",
@@ -28,6 +30,8 @@
     "@polkadot/util-crypto": "^9.2.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "nodemon": "^2.0.16",
+    "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.4.0"
   }
 }
