--- a/examples/rust/connect/Cargo.toml
+++ b/examples/rust/connect/Cargo.toml
@@ -6,6 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-time = "0.1.12"
-reqwest = "0.11.10"
-fstrings = "0.2.3"
+reqwest = { version = "0.11", features = ["blocking", "json"] }
+tokio = { version = "1", features = ["full"] }
