--- a/examples/rust/connect/Cargo.toml
+++ b/examples/rust/connect/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 tokio = { version = "1", features = ["full"] }
+serde = { version="1.0.137" , features=["derive"]}
